Fix header divider overflow (#1131)

--- a/less/mosaico/header.less
+++ b/less/mosaico/header.less
@@ -345,11 +345,6 @@
 
   width: 100%;
   grid-column: 1 / -1;
-
-  @media (max-width: @breakpoint-3col) {
-    width: calc(100% + 24px);
-    margin-left: -12px;
-  }
 }
 
 .mosaico-header .spinner--loading-spinner {
